[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epstein-files-downloader"
version = "1.0.0"
description = "CLI tool to download and archive the Epstein Files from the DOJ"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
]
keywords = ["epstein", "doj", "archive", "downloader", "foia"]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
epstein-dl = "epstein_downloader.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/epstein-files-downloader"
Repository = "https://github.com/YOUR_USERNAME/epstein-files-downloader"
Issues = "https://github.com/YOUR_USERNAME/epstein-files-downloader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["epstein_downloader*"]
